--- a/eventpromotion/styles/event.css
+++ b/eventpromotion/styles/event.css
@@ -30,20 +30,20 @@ body {
 }
 #event_page #event_main_section {
   width: 100%;
-  height: 1800px;
+  height: 1400px;
   background: url("../../imgs/event_topbg.jpg") center/cover no-repeat;
 }
 #event_page #event_main_section .inner {
-  width: 1050px;
+  width: 100%;
+  height: 1400px;
   margin: 0 auto;
 }
 #event_page #event_main_section .inner #event_main {
-  top: 173px;
-  height: 1400px;
+  width: 100%;
   position: relative;
 }
 #event_page #event_main_section .inner #event_main #event_main_text {
-  top: 190px;
+  top: 280px;
   position: absolute;
   left: 50%;
   transform: translateX(-50%);
@@ -53,75 +53,98 @@ body {
   align-items: center;
 }
 #event_page #event_main_section .inner #event_main #event_main_text h4 {
-  font-size: 2.4rem;
+  font-size: 2rem;
   font-weight: 400;
 }
 #event_page #event_main_section .inner #event_main #event_main_text #underline {
-  width: 315px;
+  width: 260px;
   height: 1px;
   background: #000;
-  margin: 2px auto 43px;
+  margin: 2px auto 20px;
 }
 #event_page #event_main_section .inner #event_main #event_main_text h2 {
-  font-size: 4.8rem;
+  font-size: 4rem;
   font-weight: 400;
-  margin-bottom: 10px;
 }
 #event_page #event_main_section .inner #event_main #event_main_text h2 b {
   color: #ff9900;
   font-weight: bold;
 }
 #event_page #event_main_section .inner #event_main #event_main_text h3 {
-  font-size: 6.4rem;
+  font-size: 5.4rem;
   font-weight: 400;
-  margin-bottom: 18px;
+  margin-bottom: 12px;
 }
 #event_page #event_main_section .inner #event_main #event_main_text h3 b {
   color: #2e8632;
   font-weight: bold;
 }
 #event_page #event_main_section .inner #event_main #event_main_text span {
-  font-size: 1.9rem;
+  font-size: 1.6rem;
   font-weight: 400;
 }
 #event_page #event_main_section .inner #event_main #event_roulette img {
   position: absolute;
 }
 #event_page #event_main_section .inner #event_main #event_roulette img:first-child {
-  top: 54px;
-  left: 158px;
+  top: 240px;
+  left: calc(50vw - 460px);
 }
 #event_page #event_main_section .inner #event_main #event_roulette img:nth-child(2) {
-  bottom: 258px;
-  left: 152px;
+  top: 870px;
+  left: calc(50vw - 380px);
   z-index: 1;
 }
 #event_page #event_main_section .inner #event_main #event_roulette img:nth-child(3) {
-  bottom: 358px;
-  right: 25px;
+  top: 870px;
+  right: calc(50vw - 500px);
 }
 #event_page #event_main_section .inner #event_main #event_roulette img:nth-child(4) {
-  bottom: 290px;
-  right: 87px;
+  top: 1000px;
+  right: calc(50vw - 450px);
 }
 #event_page #event_main_section .inner #event_main #event_roulette img:nth-child(5) {
-  top: 513px;
+  top: 493px;
   left: 50%;
   transform: translatex(-50%);
   z-index: 1;
 }
 #event_page #event_main_section .inner #event_main #event_roulette img:nth-child(6) {
-  top: 234px;
-  right: 268px;
+  top: 300px;
+  right: calc(50vw - 280px);
 }
 #event_page #event_main_section .inner #event_main #event_roulette img:last-child {
-  top: 538px;
+  width: 600px;
+  top: 530px;
   left: 50%;
   transform: translatex(-50%);
 }
+#event_page #event_main_section .inner #event_main #roulette_center {
+  position: absolute;
+  top: 750px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 140px;
+  height: 140px;
+  background: #f37100;
+  border: none;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: background 0.4s ease, transform 0.4s ease;
+  cursor: pointer;
+  font-size: 3rem;
+  color: #fff;
+  font-weight: 600;
+}
+#event_page #event_main_section .inner #event_main #roulette_center:hover {
+  background: #ff9900;
+  transform: translateX(-50%) scale(1.05);
+}
 #event_page #event_main_section .inner #event_main #event_down_text {
   position: absolute;
-  bottom: 83px;
+  top: 1160px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
@@ -130,18 +153,81 @@ body {
   align-items: center;
 }
 #event_page #event_main_section .inner #event_main #event_down_text #roulette_uparr {
-  width: 50px;
+  width: 30px;
   margin-bottom: 10px;
   overflow: hidden;
 }
 #event_page #event_main_section .inner #event_main #event_down_text #roulette_uparr img {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  object-fit: cover;
 }
 #event_page #event_main_section .inner #event_main #event_down_text span {
-  font-size: 3rem;
-  bottom: 83px;
+  font-size: 1.8rem;
+}
+#event_page #event_modal_section {
+  display: none;
+}
+#event_page #event_modal_section.active {
+  display: block;
+}
+#event_page #event_modal_section #event_before {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.2);
+  z-index: 2;
+}
+#event_page #event_modal_section #event_modal {
+  position: fixed;
+  top: 30vh;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 500px;
+  height: 280px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background: #fff;
+  border-radius: 30px;
+  z-index: 3;
+}
+#event_page #event_modal_section #event_modal #modal_inner {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 30px;
+  padding-top: 10px;
+}
+#event_page #event_modal_section #event_modal #modal_inner h2 {
+  width: 100%;
+  text-align: center;
+  font-size: 2.4rem;
+  color: #000;
+  font-weight: normal;
+}
+#event_page #event_modal_section #event_modal #modal_inner h2 #modal_content {
+  font-weight: bold;
+  font-size: 3.2rem;
+  color: #f37100;
+}
+#event_page #event_modal_section #event_modal #modal_inner #modal_btn {
+  width: 400px;
+  height: 56px;
+  border: none;
+  border-radius: 30px;
+  background: #f37100;
+  color: #fff;
+  font-size: 2.2rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+#event_page #event_modal_section #event_modal #modal_inner #modal_btn:hover {
+  background: #ff9900;
 }
 #event_page #event_middle_plus {
   width: 76px;
@@ -150,7 +236,7 @@ body {
   background: #f37100;
   z-index: 1;
   position: absolute;
-  top: 2020px;
+  top: 1590px;
   left: 50%;
   transform: translateX(-50%);
 }
@@ -170,13 +256,13 @@ body {
 }
 #event_page #event_product {
   width: 100%;
-  height: 2407px;
   background: #fffaf1;
 }
 #event_page #event_product .inner {
-  width: 1050px;
+  max-width: 1050px;
+  width: 100%;
   height: 100%;
-  padding-top: 100px;
+  padding: 100px 0 120px 0;
   margin: 0 auto;
 }
 #event_page #event_product .inner #event_product_up {
@@ -186,7 +272,7 @@ body {
   justify-content: space-between;
 }
 #event_page #event_product .inner #event_product_up .product_title_line {
-  width: 310px;
+  width: 30%;
   height: 2px;
   background: #f37100;
 }
@@ -208,7 +294,7 @@ body {
   text-align: right;
   display: inline-block;
   margin: 60px auto 10px;
-  font-size: 2rem;
+  font-size: 1.8rem;
   font-weight: 200;
 }
 #event_page #event_product .inner ul {
@@ -224,12 +310,22 @@ body {
   display: flex;
   position: relative;
   overflow: hidden;
+  cursor: pointer;
+}
+#event_page #event_product .inner ul li:hover > img {
+  opacity: 1;
 }
 #event_page #event_product .inner ul li:first-child .event_product_inner .event_product_sale {
   background: #ff9900;
 }
+#event_page #event_product .inner ul li img {
+  width: 50%;
+  object-fit: cover;
+  opacity: 0.85;
+  transition: opacity 0.4s;
+}
 #event_page #event_product .inner ul li .event_product_inner {
-  width: 425px;
+  width: 50%;
   height: 260px;
   margin: 40px 60px;
   position: relative;
@@ -242,28 +338,28 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 40px;
+  border-radius: 50%;
   background: #ffc164;
 }
 #event_page #event_product .inner ul li .event_product_inner .event_product_sale h2 {
   color: #fff;
-  font-size: 3.2rem;
+  font-size: 2.8rem;
   font-weight: bold;
 }
 #event_page #event_product .inner ul li .event_product_inner .event_product_sale h2 span {
-  font-size: 2.4rem;
+  font-size: 2rem;
 }
 #event_page #event_product .inner ul li .event_product_inner .event_product_text {
   position: absolute;
   top: 70px;
 }
 #event_page #event_product .inner ul li .event_product_inner .event_product_text span {
-  font-size: 2rem;
+  font-size: 1.8rem;
   line-height: 3rem;
   color: #999;
 }
 #event_page #event_product .inner ul li .event_product_inner .event_product_text h3 {
-  font-size: 3rem;
+  font-size: 2.8rem;
   font-weight: bold;
 }
 #event_page #event_product .inner ul li .event_product_inner .event_product_text .product_text_price {
@@ -272,7 +368,7 @@ body {
   gap: 10px;
 }
 #event_page #event_product .inner ul li .event_product_inner .event_product_text .product_text_price h2 {
-  font-size: 4rem;
+  font-size: 3.6rem;
   line-height: 6.5rem;
   color: #f37100;
 }
@@ -284,23 +380,40 @@ body {
 #event_page #event_product .inner ul li .event_product_inner .event_product_godet {
   position: absolute;
   bottom: 0;
+  right: 6px;
+  display: flex;
+  gap: 10px;
+  transition: all 0.2s;
+  cursor: pointer;
+}
+#event_page #event_product .inner ul li .event_product_inner .event_product_godet:hover {
   right: 0;
+  gap: 16px;
 }
 #event_page #event_product .inner ul li .event_product_inner .event_product_godet span {
   font-size: 1.8rem;
 }
+#event_page #event_product .inner ul li .event_product_inner .event_product_godet img {
+  margin-top: 6px;
+  width: 37px;
+  height: 8.5px;
+}
 #event_page #event_product .inner #event_product_banner {
   width: 100%;
-  height: 450px;
-  margin-top: 60px;
+  height: 400px;
+  margin-top: 40px;
   background: linear-gradient(90deg, rgb(151, 210, 118) 0%, rgb(110, 171, 77) 100%);
   border-radius: 20px;
   position: relative;
   overflow: hidden;
+  cursor: pointer;
+}
+#event_page #event_product .inner #event_product_banner:hover #product_banner_title img {
+  left: 430px;
 }
 #event_page #event_product .inner #event_product_banner span {
   display: inline-block;
-  margin-top: 60px;
+  margin-top: 50px;
   margin-left: 50px;
   font-size: 2.4rem;
   color: #fff;
@@ -310,19 +423,19 @@ body {
 }
 #event_page #event_product .inner #event_product_banner #product_banner_title div {
   position: absolute;
-  top: 123px;
-  left: 291px;
-  width: 164px;
+  top: 96px;
+  left: 264px;
+  width: 146px;
   height: 23px;
   background: #a4ff24;
   opacity: 0.4;
 }
 #event_page #event_product .inner #event_product_banner #product_banner_title h4 {
   position: absolute;
-  top: 103px;
+  top: 80px;
   left: 50px;
   color: #fff;
-  font-size: 3.6rem;
+  font-size: 3.2rem;
   font-weight: 400;
 }
 #event_page #event_product .inner #event_product_banner #product_banner_title h4 b {
@@ -330,12 +443,14 @@ body {
 }
 #event_page #event_product .inner #event_product_banner #product_banner_title img {
   position: absolute;
-  top: 126px;
-  left: 469px;
+  top: 96px;
+  left: 420px;
+  transition: all 0.2s;
 }
 #event_page #event_product .inner #event_product_banner #product_banner_img {
+  width: 100%;
   position: absolute;
-  bottom: 40px;
+  bottom: 30px;
 }
 #event_page #event_caution .inner {
   width: 1050px;
@@ -344,14 +459,14 @@ body {
   margin: 0 auto;
 }
 #event_page #event_caution .inner h4 {
-  font-size: 3rem;
+  font-size: 2.8rem;
   font-weight: bold;
-  margin-bottom: 40px;
+  margin-bottom: 20px;
 }
 #event_page #event_caution .inner p {
-  font-size: 2.4rem;
+  font-size: 1.8rem;
   font-weight: 400;
-  line-height: 4.8rem;
+  line-height: 3.6rem;
 }
 #event_page #event_caution .inner p .space {
   color: #fff;
