--- a/eventpromotion/styles/event.scss
+++ b/eventpromotion/styles/event.scss
@@ -20,18 +20,18 @@ body {
 
   #event_main_section {
     width: 100%;
-    height: 1800px;
+    height: 1400px;
     background: url("../../imgs/event_topbg.jpg") center/cover no-repeat;
 
     .inner {
-      width: 1050px;
+      width: 100%;
+      height: 1400px;
       margin: 0 auto;
       #event_main {
-        top: 173px;
-        height: 1400px;
+        width: 100%;
         position: relative;
         #event_main_text {
-          top: 190px;
+          top: 280px;
           position: absolute;
           left: 50%;
           transform: translateX(-50%);
@@ -40,35 +40,34 @@ body {
           text-align: center;
           align-items: center;
           h4 {
-            font-size: 2.4rem;
+            font-size: 2rem;
             font-weight: 400;
           }
           #underline {
-            width: 315px;
+            width: 260px;
             height: 1px;
             background: map-get($map: $color, $key: dark);
-            margin: 2px auto 43px;
+            margin: 2px auto 20px;
           }
           h2 {
-            font-size: 4.8rem;
+            font-size: 4rem;
             font-weight: 400;
-            margin-bottom: 10px;
             b {
               color: map-get($map: $color, $key: main-02);
               font-weight: bold;
             }
           }
           h3 {
-            font-size: 6.4rem;
+            font-size: 5.4rem;
             font-weight: 400;
-            margin-bottom: 18px;
+            margin-bottom: 12px;
             b {
               color: map-get($map: $color, $key: green-2e8632);
               font-weight: bold;
             }
           }
           span {
-            font-size: 1.9rem;
+            font-size: 1.6rem;
             font-weight: 400;
           }
         }
@@ -76,42 +75,66 @@ body {
           img {
             position: absolute;
             &:first-child {
-              top: 54px;
-              left: 158px;
+              top: 240px;
+              left: calc(50vw - 460px);
             }
             &:nth-child(2) {
-              bottom: 258px;
-              left: 152px;
+              top: 870px;
+              left: calc(50vw - 380px);
               z-index: 1;
             }
             &:nth-child(3) {
-              bottom: 358px;
-              right: 25px;
+              top: 870px;
+              right: calc(50vw - 500px);
             }
             &:nth-child(4) {
-              bottom: 290px;
-              right: 87px;
+              top: 1000px;
+              right: calc(50vw - 450px);
             }
             &:nth-child(5) {
-              top: 513px;
+              top: 493px;
               left: 50%;
               transform: translatex(-50%);
               z-index: 1;
             }
             &:nth-child(6) {
-              top: 234px;
-              right: 268px;
+              top: 300px;
+              right: calc(50vw - 280px);
             }
             &:last-child {
-              top: 538px;
+              width: 600px;
+              top: 530px;
               left: 50%;
               transform: translatex(-50%);
             }
           }
         }
+        #roulette_center {
+          position: absolute;
+          top: 750px;
+          left: 50%;
+          transform: translateX(-50%);
+          width: 140px;
+          height: 140px;
+          background: map-get($map: $color, $key: main-01);
+          border: none;
+          border-radius: 50%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          transition: background 0.4s ease, transform 0.4s ease;
+          cursor: pointer;
+            font-size: 3rem;
+            color: map-get($map: $color, $key: light);
+            font-weight: 600;
+          &:hover {
+            background: map-get($map: $color, $key: main-02);
+            transform: translateX(-50%) scale(1.05);
+          }
+        }
         #event_down_text {
           position: absolute;
-          bottom: 83px;
+          top: 1160px;
           left: 50%;
           transform: translateX(-50%);
           display: flex;
@@ -119,7 +142,7 @@ body {
           text-align: center;
           align-items: center;
           #roulette_uparr {
-            width: 50px;
+            width: 30px;
             margin-bottom: 10px;
             overflow: hidden;
             img {
@@ -128,10 +151,76 @@ body {
             }
           }
           span {
-            font-size: 3rem;
-            bottom: 83px;
+            font-size: 1.8rem;
           }
         }
+      }
+    }
+  }
+
+  #event_modal_section{
+    display: none;
+    &.active {
+      display: block;
+    }
+    #event_before {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background-color: rgba(0, 0, 0, 0.2);
+      z-index: 2;
+    }
+    #event_modal {
+      position: fixed;
+      top: 30vh;
+      left: 50%;
+      transform: translateX(-50%);
+      width: 500px;
+      height: 280px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex-direction: column;
+      background: map-get($map: $color, $key: light);
+      border-radius: 30px;
+      z-index: 3;
+      #modal_inner{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        gap: 30px;
+        padding-top: 10px;
+  h2{
+    width: 100%;
+    text-align: center;
+    font-size: 2.4rem;
+    color: map-get($map: $color, $key: dark);
+    font-weight: normal;
+    #modal_content {
+      font-weight: bold;
+      font-size: 3.2rem;
+      color: map-get($map: $color, $key: main-01);
+    }
+  }
+  #modal_btn {
+    width: 400px;
+    height: 56px;
+    border: none;
+    border-radius: 30px;
+    background: map-get($map:$color
+  , $key: main-01);
+    color: map-get($map: $color, $key: light);
+    font-size: 2.2rem;
+    font-weight: 600;
+    cursor: pointer;
+    transition: background 0.2s;
+    &:hover {
+      background: map-get($map: $color, $key: main-02);
+    }
+  }
       }
     }
   }
@@ -143,7 +232,7 @@ body {
     background: map-get($map: $color, $key: main-01);
     z-index: 1;
     position: absolute;
-    top: 2020px;
+    top: 1590px;
     left: 50%;
     transform: translateX(-50%);
     .middle_plus {
@@ -164,12 +253,12 @@ body {
 
   #event_product {
     width: 100%;
-    height: 2407px;
     background: map-get($map: $color, $key: sub-03);
     .inner {
-      width: 1050px;
+      max-width: 1050px;
+      width: 100%;
       height: 100%;
-      padding-top: 100px;
+      padding: 100px 0 120px 0;
       margin: 0 auto;
       #event_product_up {
         width: 100%;
@@ -177,7 +266,7 @@ body {
         align-items: center;
         justify-content: space-between;
         .product_title_line {
-          width: 310px;
+          width: 30%;
           height: 2px;
           background: map-get($map: $color, $key: main-01);
         }
@@ -200,7 +289,7 @@ body {
         text-align: right;
         display: inline-block;
         margin: 60px auto 10px;
-        font-size: 2rem;
+        font-size: 1.8rem;
         font-weight: 200;
       }
       ul {
@@ -215,6 +304,12 @@ body {
           display: flex;
           position: relative;
           overflow: hidden;
+          cursor: pointer;
+          &:hover {
+            &>img {
+              opacity: 1;
+            }
+          }
           &:first-child {
             .event_product_inner {
               .event_product_sale {
@@ -222,8 +317,14 @@ body {
               }
             }
           }
+            img {
+              width: 50%;
+              object-fit: cover;
+              opacity: 0.85;
+              transition: opacity 0.4s;
+            }
           .event_product_inner {
-            width: 425px;
+            width: 50%;
             height: 260px;
             margin: 40px 60px;
             position: relative;
@@ -235,14 +336,14 @@ body {
               display: flex;
               justify-content: center;
               align-items: center;
-              border-radius: 40px;
+              border-radius: 50%;
               background: map-get($map: $color, $key: sub-01);
               h2 {
                 color: map-get($map: $color, $key: light);
-                font-size: 3.2rem;
+                font-size: 2.8rem;
                 font-weight: bold;
                 span {
-                  font-size: 2.4rem;
+                  font-size: 2rem;
                 }
               }
             }
@@ -250,12 +351,12 @@ body {
               position: absolute;
               top: 70px;
               span {
-                font-size: 2rem;
+                font-size: 1.8rem;
                 line-height: 3rem;
                 color: map-get($map: $color, $key: gray-999);
               }
               h3 {
-                font-size: 3rem;
+                font-size: 2.8rem;
                 font-weight: bold;
               }
               .product_text_price {
@@ -263,7 +364,7 @@ body {
                 align-items: center;
                 gap: 10px;
                 h2 {
-                  font-size: 4rem;
+                  font-size: 3.6rem;
                   line-height: 6.5rem;
                   color: map-get($map: $color, $key: main-01);
                 }
@@ -277,9 +378,22 @@ body {
             .event_product_godet {
               position: absolute;
               bottom: 0;
-              right: 0;
+              right: 6px;
+              display: flex;
+              gap: 10px;
+              transition: all 0.2s;
+              cursor: pointer;
+              &:hover {
+                right: 0;
+                gap: 16px;
+              }
               span {
                 font-size: 1.8rem;
+              }
+              img {
+                margin-top: 6px;
+                width: 37px;
+                height: 8.5px;
               }
             }
           }
@@ -287,8 +401,8 @@ body {
       }
       #event_product_banner {
         width: 100%;
-        height: 450px;
-        margin-top: 60px;
+        height: 400px;
+        margin-top: 40px;
         background: linear-gradient(
           90deg,
           rgba(151, 210, 118, 1) 0%,
@@ -297,9 +411,17 @@ body {
         border-radius: 20px;
         position: relative;
         overflow: hidden;
+        cursor: pointer;
+        &:hover {
+          #product_banner_title {
+            img {
+              left: 430px;
+            }
+          }
+        }
         span {
           display: inline-block;
-          margin-top: 60px;
+          margin-top: 50px;
           margin-left: 50px;
           font-size: 2.4rem;
           color: map-get($map: $color, $key: light);
@@ -308,19 +430,19 @@ body {
           margin-left: 50px;
           div {
             position: absolute;
-            top: 123px;
-            left: 291px;
-            width: 164px;
+            top: 96px;
+            left: 264px;
+            width: 146px;
             height: 23px;
             background: #a4ff24;
             opacity: 0.4;
           }
           h4 {
             position: absolute;
-            top: 103px;
+            top: 80px;
             left: 50px;
             color: map-get($map: $color, $key: light);
-            font-size: 3.6rem;
+            font-size: 3.2rem;
             font-weight: 400;
             b {
               font-weight: bold;
@@ -328,13 +450,15 @@ body {
           }
           img {
             position: absolute;
-            top: 126px;
-            left: 469px;
+            top: 96px;
+            left: 420px;
+            transition: all 0.2s;
           }
         }
         #product_banner_img {
+          width: 100%;
           position: absolute;
-          bottom: 40px;
+          bottom: 30px;
         }
       }
     }
@@ -347,14 +471,14 @@ body {
       padding: 100px 0 120px;
       margin: 0 auto;
       h4 {
-        font-size: 3rem;
+        font-size: 2.8rem;
         font-weight: bold;
-        margin-bottom: 40px;
+        margin-bottom: 20px;
       }
       p {
-        font-size: 2.4rem;
+        font-size: 1.8rem;
         font-weight: 400;
-        line-height: 4.8rem;
+        line-height: 3.6rem;
         .space {
           color: map-get($map: $color, $key: light);
         }
