--- a/styles/footer.css
+++ b/styles/footer.css
@@ -22,12 +22,38 @@ footer {
   align-items: center;
   background: #f5f5f5;
   color: #999;
+  position: relative;
 }
 footer .footer_inner {
   width: 1050px;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+footer .footer_inner .up_btn {
+  width: 50px;
+  height: 50px;
+  right: 6vh;
+  bottom: 6vh;
+  position: fixed;
+  opacity: 0;
+  transition: opacity 0.4s;
+}
+footer .footer_inner .up_btn a div {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: #ffc164;
+  border-radius: 27px;
+}
+footer .footer_inner .up_btn a div i {
+  font-size: 2rem;
+  color: #fff;
+}
+footer .footer_inner .up_btn.active {
+  opacity: 1;
 }
 footer .footer_inner .footer_inner_left {
   display: flex;
