--- a/styles/footer.scss
+++ b/styles/footer.scss
@@ -13,11 +13,39 @@ footer {
   align-items: center;
   background: map-get($map: $color, $key: gray-f5f5f5);
   color: map-get($map: $color, $key: gray-999);
+  position: relative;
   .footer_inner {
     width: 1050px;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    .up_btn {
+      width: 50px;
+      height: 50px;
+      right: 6vh;
+      bottom: 6vh;
+      position: fixed;
+      opacity: 0;
+      transition: opacity 0.4s;
+      a {
+        div {
+          width: 100%;
+          height: 100%;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          background: map-get($map: $color, $key: sub-01);
+          border-radius: 27px;
+          i {
+            font-size: 2rem;
+            color: map-get($map: $color, $key: light);
+          }
+        }
+      }
+      &.active {
+        opacity: 1;
+      }
+    }
     .footer_inner_left {
       display: flex;
       flex-direction: column;
