--- a/styles/header.scss
+++ b/styles/header.scss
@@ -7,7 +7,6 @@
 // header
 header {
   width: 100%;
-  height: 200px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -16,7 +15,22 @@ header {
   box-shadow: 0px 4px 15px 0px rgba(0, 0, 0, 0.07);
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 3;
+  transition: transform 0.8s ease;
+    &.scroll {
+    &::before {
+      content: "";
+      display: block;
+      position: absolute;
+      z-index: -1;
+      width: 100vw;
+      height:100px;
+      backdrop-filter: blur(10px);
+    }
+  }
+  &.hidden {
+    transform: translateY(-100%);
+  }
   .header_event {
     width: 100%;
     height: 50px;
@@ -34,120 +48,105 @@ header {
     }
   }
   .header_inner {
-    width: 1400px;
-    height: 200px;
-    display: flex;
-    justify-content: space-between;
-    padding: 20px 0;
+    width: 100%;
+    height: 180px;
+    padding: 20px 240px;
     position: relative;
     // trigger start
     nav {
       width: 100%;
       padding: 0 20px;
       .gnb {
-        display: none;
+        opacity: 0;
         flex-direction: column;
         background: #fff;
         position: fixed;
-        top: 201px;
-        left: 30px;
-        width: 200px;
-        height: 236px;
-        padding: 30px;
+        top: 145px;
+        left: 20px;
+        width: 160px;
+        padding: 22px;
         box-shadow: 0px 7px 14px 0px rgba(0, 0, 0, 0.07);
-        transition: all 0.3s;
+        transition: all 0.7s;
 
         li > a {
-          font-family: map-get($map: $font, $key: pretendard);
-          font-size: 2rem;
+          font-size: 1.6rem;
           color: map-get($map: $color, $key: dark);
           text-decoration: none;
           padding: 10px;
           display: block;
+          transition: color 0.4s;
 
           &:hover {
-            color: map-get($map: $color, $key: main-02);
+            color: map-get($map: $color, $key: main-01);
           }
         }
-
         &.active {
-          display: flex;
-          right: 0;
+          opacity: 1;
         }
       }
     }
 
     .trigger {
-      display: flex;
-      flex-direction: column;
-      gap: 6px;
+      bottom: 20px;
       position: absolute;
-      top: 120px;
-      left: -30px;
-      z-index: 11;
+      display: none;
+      flex-direction: column;
+      gap: 5px;
+      z-index: 5;
       cursor: pointer;
 
       span {
-        width: 25px;
-        height: 3px;
+        width: 22px;
+        height: 2px;
         background-color: #333;
-        border-radius: 2px;
-        transition: 0.3s;
+        border-radius: 1px;
+        transition: 0.4s;
       }
 
       &.active {
         span:nth-child(1) {
-          transform: translateY(9px) rotate(45deg);
+          transform: translateY(7px) rotate(45deg);
         }
         span:nth-child(2) {
           opacity: 0;
         }
         span:nth-child(3) {
-          transform: translateY(-9px) rotate(-45deg);
+          transform: translateY(-7px) rotate(-45deg);
         }
       }
     }
     // trigger end
 
     .header_inner_left {
-      display: flex;
-      justify-content: start;
-      align-items: end;
       position: absolute;
-      left: 0;
       bottom: 20px;
       ul {
         display: flex;
         gap: 40px;
         li {
           font-family: map-get($map: $font, $key: pretendard);
-          font-size: 2.2rem;
+          font-size: 2rem;
           cursor: pointer;
           transition: color 0.4s;
           &:hover {
             color: map-get($map: $color, $key: main-01);
           }
         }
-        .header_menu_trigger {
-          display: none;
-        }
       }
     }
     .header_inner_right {
+      height: 100%;
       display: flex;
       flex-direction: column;
       align-items: end;
-      gap: 65px;
-      position: absolute;
-      right: 0;
-      bottom: 20px;
+      justify-content: space-between;
       .inner_right_top {
         ul {
           display: flex;
           align-items: center;
           gap: 14px;
-          font-family: map-get($map: $font, $key: pretendard);
           font-size: 1.6rem;
+          font-family: map-get($map: $font, $key: pretendard);
           li {
             cursor: pointer;
             transition: color 0.4s;
@@ -188,6 +187,9 @@ header {
             cursor: pointer;
           }
         }
+        .res_magnify {
+          display: none;
+        }
         .basket {
           position: relative;
           .fa-cart-shopping {
@@ -199,7 +201,6 @@ header {
           p {
             width: 20px;
             height: 20px;
-            padding: 5px;
             display: flex;
             justify-content: center;
             align-items: center;
@@ -210,7 +211,8 @@ header {
             top: -5px;
             right: -5px;
             font-family: map-get($map: $font, $key: pretendard);
-            font-size: 1.2rem;
+            font-weight: 500;
+            font-size: 12px;
           }
         }
       }
