--- a/styles/res_header.scss
+++ b/styles/res_header.scss
@@ -5,14 +5,15 @@
 @media screen and (max-width: 1440px) {
   header {
     .header_event {
-      height: 40px;
+      height: 45px;
     }
     .header_inner {
-      width: 1000px;
-      margin: 0 auto;
+      width: 100%;
+      height: 170px;
+      padding: 20px 100px;
       .header_inner_left {
         ul {
-          gap: 20px;
+          gap: 30px;
           li {
             font-size: 1.8rem;
           }
@@ -22,7 +23,6 @@
         }
       }
       .header_inner_right {
-        justify-content: space-between;
         .inner_right_top {
           ul {
             gap: 10px;
@@ -30,11 +30,16 @@
           }
         }
         .inner_right_bottom {
-          gap: 20px;
+          gap: 22px;
           .search_bar {
-            width: 200px;
-            height: 30px;
+            width: 220px;
+            height: 35px;
             padding: 5px 15px;
+            input {
+              &::placeholder {
+                font-size: 1.2rem;
+              }
+            }
             .fa-magnifying-glass {
               font-size: 1.4rem;
             }
@@ -53,6 +58,9 @@
           }
         }
       }
+      .header_inner_logo {
+        transform: translate(-50%, -50%) scale(0.9);
+      }
     }
   }
 }
@@ -64,11 +72,74 @@
       height: 40px;
     }
     .header_inner {
-      width: 750px;
+      width: 100%;
       height: 160px;
+      padding: 20px 50px;
       .header_inner_left {
         ul {
-          gap: 20px;
+          gap: 16px;
+          li {
+            font-size: 1.6rem;
+          }
+        }
+      }
+      .header_inner_right {
+        .inner_right_top {
+          ul {
+            gap: 9px;
+            font-size: 1.3rem;
+          }
+        }
+        .inner_right_bottom {
+          gap: 16px;
+          .search_bar {
+            width: 190px;
+            height: 30px;
+            input {
+              &::placeholder {
+                font-size: 1.1rem;
+              }
+            }
+            .fa-magnifying-glass {
+              font-size: 1.3rem;
+            }
+          }
+          .basket {
+            .fa-cart-shopping {
+              width: 30px;
+              height: 28px;
+              font-size: 2.2rem;
+            }
+            p {
+              width: 15px;
+              height: 15px;
+              font-size: 0.9rem;
+            }
+          }
+        }
+      }
+      .header_inner_logo {
+        transform: translate(-50%, -50%) scale(0.8);
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 767px) {
+  header {
+    .header_event {
+      height: 35px;
+      font-size: 1.2rem;
+    }
+    .header_inner {
+      width: 100%;
+      height: 110px;
+      padding: 16px 20px;
+      .trigger {
+        display: flex;
+      }
+      .header_inner_left {
+        ul {
           li {
             display: none;
           }
@@ -105,36 +176,150 @@
         }
       }
       .header_inner_right {
-        justify-content: space-between;
         .inner_right_top {
           ul {
-            gap: 10px;
-            font-size: 1.4rem;
+            gap: 8px;
+            font-size: 1rem;
           }
         }
         .inner_right_bottom {
-          gap: 20px;
+          gap: 12px;
           .search_bar {
-            width: 200px;
-            height: 30px;
-            padding: 5px 15px;
-            .fa-magnifying-glass {
-              font-size: 1.4rem;
-            }
+            display: none;
+          }
+          .res_magnify {
+            display: block;
+            font-size: 2rem;
+            margin-bottom: 6px;
+            cursor: pointer;
           }
           .basket {
             .fa-cart-shopping {
-              width: 32px;
-              height: 30px;
-              font-size: 2.4rem;
+              width: 28px;
+              height: 26px;
+              font-size: 2rem;
             }
             p {
-              width: 16px;
-              height: 16px;
-              font-size: 1rem;
+              width: 14px;
+              height: 14px;
+              font-size: 0.8rem;
             }
           }
         }
+      }
+      .header_inner_logo {
+        transform: translate(-50%, -50%) scale(0.7);
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 500px) {
+  header {
+    .header_event {
+      height: 30px;
+      font-size: 1.1rem;
+    }
+    .header_inner {
+      width: 100%;
+      height: 100px;
+      padding: 12px 20px;
+      nav {
+        .gnb {
+          top: 130px;
+          width: 140px;
+          padding: 20px;
+          li > a {
+            font-size: 1.4rem;
+            padding: 8px;
+          }
+        }
+      }
+      .trigger {
+        bottom: 12px;
+        gap: 4px;
+        span {
+          width: 20px;
+          background-color: #333;
+          transition: 0.4s;
+        }
+
+        &.active {
+          span:nth-child(1) {
+            transform: translateY(6px) rotate(45deg);
+          }
+          span:nth-child(3) {
+            transform: translateY(-6px) rotate(-45deg);
+          }
+        }
+      }
+      .header_inner_left {
+        ul {
+          .header_menu_trigger {
+            display: block;
+            position: relative;
+            width: 30px;
+            height: 20px;
+            span {
+              &:nth-child(1) {
+                width: 30px;
+                height: 2px;
+                position: absolute;
+                top: 0;
+                background: map-get($map: $color, $key: dark);
+              }
+              &:nth-child(2) {
+                width: 30px;
+                height: 2px;
+                position: absolute;
+                top: 50%;
+                transform: translateY(-50%);
+                background: map-get($map: $color, $key: dark);
+              }
+              &:nth-child(3) {
+                width: 30px;
+                height: 2px;
+                position: absolute;
+                bottom: 0;
+                background: map-get($map: $color, $key: dark);
+              }
+            }
+          }
+        }
+      }
+      .header_inner_right {
+        .inner_right_top {
+          ul {
+            gap: 7px;
+            font-size: 1rem;
+          }
+        }
+        .inner_right_bottom {
+          gap: 12px;
+          .search_bar {
+            display: none;
+          }
+          .res_magnify {
+            font-size: 1.7rem;
+            margin-bottom: 6px;
+          }
+          .basket {
+            .fa-cart-shopping {
+              width: 24px;
+              height: 22px;
+              font-size: 1.8rem;
+            }
+            p {
+              width: 14px;
+              height: 14px;
+              font-size: 0.8rem;
+            }
+          }
+        }
+      }
+      .header_inner_logo {
+        transform: translate(-50%, -50%) scale(0.6);
+        padding-top: 5px;
       }
     }
   }
