--- a/styles/header.css
+++ b/styles/header.css
@@ -34,7 +34,8 @@ header.scroll::before {
   z-index: -1;
   width: 100vw;
   height: 100px;
-  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+          backdrop-filter: blur(10px);
 }
 header.hidden {
   transform: translateY(-100%);
@@ -178,6 +179,11 @@ header .header_inner .header_inner_right .inner_right_bottom .search_bar input {
 }
 header .header_inner .header_inner_right .inner_right_bottom .search_bar input:focus {
   outline: none;
+}
+header .header_inner .header_inner_right .inner_right_bottom .search_bar input:focus::-moz-placeholder {
+  -moz-transition: all 0.3s;
+  transition: all 0.3s;
+  opacity: 0;
 }
 header .header_inner .header_inner_right .inner_right_bottom .search_bar input:focus::placeholder {
   transition: all 0.3s;
