--- a/styles/res_header.css
+++ b/styles/res_header.css
@@ -28,6 +28,9 @@
     height: 35px;
     padding: 5px 15px;
   }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar input::-moz-placeholder {
+    font-size: 1.2rem;
+  }
   header .header_inner .header_inner_right .inner_right_bottom .search_bar input::placeholder {
     font-size: 1.2rem;
   }
@@ -73,6 +76,9 @@
   header .header_inner .header_inner_right .inner_right_bottom .search_bar {
     width: 190px;
     height: 30px;
+  }
+  header .header_inner .header_inner_right .inner_right_bottom .search_bar input::-moz-placeholder {
+    font-size: 1.1rem;
   }
   header .header_inner .header_inner_right .inner_right_bottom .search_bar input::placeholder {
     font-size: 1.1rem;
