--- a/detail/styles/detail.scss
+++ b/detail/styles/detail.scss
@@ -530,10 +530,91 @@ body {
       color: map-get($map: $color, $key: dark);
       cursor: pointer;
 
-      &:first-child {
+      // &:first-child {
+      //   color: map-get($map: $color, $key: main-01);
+      //   font-weight: 700;
+      //   text-decoration: underline;
+      // }
+
+      &.active {
         color: map-get($map: $color, $key: main-01);
         font-weight: 700;
         text-decoration: underline;
+      }
+    }
+  }
+}
+
+/* modal */
+.modal_overlay {
+  position: fixed;
+  top: 50px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  z-index: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .modal {
+    width: 500px;
+    background: map-get($map: $color, $key: light);
+    border-radius: 20px;
+    padding: 30px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+    .modal_header {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+
+      h2 {
+        font-size: 2.4rem;
+        font-weight: 700;
+      }
+
+      .modal_close {
+        font-size: 2.4rem;
+        cursor: pointer;
+      }
+    }
+
+    .modal_body {
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+
+      input,
+      textarea {
+        padding: 10px;
+        font-size: 1.6rem;
+        border: 1px solid map-get($map: $color, $key: gray-ccc);
+        border-radius: 8px;
+        width: 100%;
+      }
+
+      textarea {
+        height: 100px;
+        resize: none;
+      }
+    }
+
+    .modal_footer {
+      display: flex;
+      justify-content: flex-end;
+
+      .modal_submit {
+        padding: 10px 20px;
+        font-size: 1.6rem;
+        background: map-get($color, main-01);
+        color: map-get($map: $color, $key: light);
+        border: none;
+        border-radius: 10px;
+        cursor: pointer;
       }
     }
   }
