--- a/styles/res_header.scss
+++ b/styles/res_header.scss
@@ -135,6 +135,9 @@
       width: 100%;
       height: 110px;
       padding: 16px 20px;
+      nav {
+        display: flex;
+      }
       .trigger {
         display: flex;
       }
