--- a/styles/header.css
+++ b/styles/header.css
@@ -32,7 +32,7 @@ header.scroll::before {
   display: block;
   position: absolute;
   z-index: -1;
-  width: 100vw;
+  width: 100%;
   height: 100px;
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
@@ -63,6 +63,7 @@ header .header_inner {
   position: relative;
 }
 header .header_inner nav {
+  display: none;
   width: 100%;
   padding: 0 20px;
 }
@@ -76,7 +77,7 @@ header .header_inner nav .gnb {
   width: 160px;
   padding: 22px;
   box-shadow: 0px 7px 14px 0px rgba(0, 0, 0, 0.07);
-  transition: all 0.7s;
+  transition: opacity 0.4s;
 }
 header .header_inner nav .gnb li > a {
   font-size: 1.6rem;
