--- a/login/styles/mypage.scss
+++ b/login/styles/mypage.scss
@@ -22,6 +22,7 @@ body {
   flex-direction: column;
   gap: 100px;
   font-size: 1.6rem;
+  font-family: map-get($map: $font, $key: pretendard);
 }
 
 // main
