--- a/login/styles/sign.scss
+++ b/login/styles/sign.scss
@@ -160,6 +160,7 @@ body {
   flex-direction: column;
   gap: 100px;
   font-size: 1.6rem;
+  font-family: map-get($map: $font, $key: pretendard);
 }
 
 // main
