--- a/styles/header.scss
+++ b/styles/header.scss
@@ -17,14 +17,14 @@ header {
   top: 0;
   z-index: 3;
   transition: transform 0.8s ease;
-    &.scroll {
+  &.scroll {
     &::before {
       content: "";
       display: block;
       position: absolute;
       z-index: -1;
       width: 100vw;
-      height:100px;
+      height: 100px;
       backdrop-filter: blur(10px);
     }
   }
@@ -67,15 +67,14 @@ header {
         padding: 22px;
         box-shadow: 0px 7px 14px 0px rgba(0, 0, 0, 0.07);
         transition: all 0.7s;
-
-        li > a {
+        li {
           font-size: 1.6rem;
           color: map-get($map: $color, $key: dark);
           text-decoration: none;
           padding: 10px;
           display: block;
           transition: color 0.4s;
-
+          cursor: pointer;
           &:hover {
             color: map-get($map: $color, $key: main-01);
           }
@@ -85,7 +84,6 @@ header {
         }
       }
     }
-
     .trigger {
       bottom: 20px;
       position: absolute;
@@ -94,7 +92,6 @@ header {
       gap: 5px;
       z-index: 5;
       cursor: pointer;
-
       span {
         width: 22px;
         height: 2px;
@@ -102,7 +99,6 @@ header {
         border-radius: 1px;
         transition: 0.4s;
       }
-
       &.active {
         span:nth-child(1) {
           transform: translateY(7px) rotate(45deg);
@@ -116,7 +112,6 @@ header {
       }
     }
     // trigger end
-
     .header_inner_left {
       position: absolute;
       bottom: 20px;
