--- a/login/styles/sign.css
+++ b/login/styles/sign.css
@@ -42,14 +42,14 @@ header {
   position: sticky;
   top: 0;
   z-index: 3;
-  transition: transform 0.8s ease;
+  transition: transform 0.4s ease;
 }
 header.scroll::before {
   content: "";
   display: block;
   position: absolute;
   z-index: -1;
-  width: 100vw;
+  width: 100%;
   height: 100px;
   -webkit-backdrop-filter: blur(10px);
           backdrop-filter: blur(10px);
@@ -80,8 +80,10 @@ header .header_inner {
   position: relative;
 }
 header .header_inner nav {
+  display: none;
   width: 100%;
   padding: 0 20px;
+  display: none;
 }
 header .header_inner nav .gnb {
   opacity: 0;
@@ -93,7 +95,7 @@ header .header_inner nav .gnb {
   width: 160px;
   padding: 22px;
   box-shadow: 0px 7px 14px 0px rgba(0, 0, 0, 0.07);
-  transition: all 0.7s;
+  transition: opacity 0.4s;
 }
 header .header_inner nav .gnb li > a {
   font-size: 1.6rem;
