header link update

--- a/styles/res_header.scss
+++ b/styles/res_header.scss
@@ -232,7 +232,7 @@
           top: 130px;
           width: 140px;
           padding: 20px;
-          li > a {
+          li {
             font-size: 1.4rem;
             padding: 8px;
           }
