--- a/styles/header.scss
+++ b/styles/header.scss
@@ -70,15 +70,14 @@ header {
         padding: 22px;
         box-shadow: 0px 7px 14px 0px rgba(0, 0, 0, 0.07);
         transition: opacity 0.4s;
-
-        li > a {
+        li {
           font-size: 1.6rem;
           color: map-get($map: $color, $key: dark);
           text-decoration: none;
           padding: 10px;
           display: block;
           transition: color 0.4s;
-
+          cursor: pointer;
           &:hover {
             color: map-get($map: $color, $key: main-01);
           }
