--- a/detail/styles/detail.css
+++ b/detail/styles/detail.css
@@ -98,15 +98,16 @@ header .header_inner nav .gnb {
   box-shadow: 0px 7px 14px 0px rgba(0, 0, 0, 0.07);
   transition: opacity 0.4s;
 }
-header .header_inner nav .gnb li > a {
+header .header_inner nav .gnb li {
   font-size: 1.6rem;
   color: #000;
   text-decoration: none;
   padding: 10px;
   display: block;
   transition: color 0.4s;
+  cursor: pointer;
 }
-header .header_inner nav .gnb li > a:hover {
+header .header_inner nav .gnb li:hover {
   color: #f37100;
 }
 header .header_inner nav .gnb.active {
@@ -288,7 +289,7 @@ footer .footer_inner .up_btn {
   opacity: 0;
   transition: opacity 0.4s;
 }
-footer .footer_inner .up_btn a div {
+footer .footer_inner .up_btn div {
   width: 100%;
   height: 100%;
   display: flex;
@@ -297,7 +298,7 @@ footer .footer_inner .up_btn a div {
   background: #ffc164;
   border-radius: 27px;
 }
-footer .footer_inner .up_btn a div i {
+footer .footer_inner .up_btn div i {
   font-size: 2rem;
   color: #fff;
 }
@@ -711,11 +712,14 @@ body {
   padding-right: 20px;
   margin-bottom: 80px;
 }
-.detail_product .product_title img {
+.detail_product .product_title .product_title_img {
   border-radius: 10px;
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
+  max-width: 930px;
+  height: auto;
+  aspect-ratio: 930/605;
 }
 .detail_product .product_title h1 {
   font-size: 3rem;
@@ -738,6 +742,9 @@ body {
 }
 .detail_product .product_title .img_group img {
   width: 22.3%;
+  max-width: 22.3%;
+  height: auto;
+  aspect-ratio: 200/200;
 }
 .detail_product .product_thumb {
   width: 100%;
@@ -752,11 +759,13 @@ body {
   overflow: hidden;
   padding-right: 20px;
 }
-.detail_product .product_thumb .thumb_one img {
-  border-radius: 10px;
+.detail_product .product_thumb .thumb_one .product_sub_img {
+  width: 20%;
+  max-width: 20%;
+  aspect-ratio: 1/1;
   -o-object-fit: cover;
      object-fit: cover;
-  width: 20%;
+  border-radius: 10px;
 }
 .detail_product .product_thumb .thumb_one p {
   width: 50px;
@@ -773,13 +782,13 @@ body {
   align-items: center;
   padding: 8px 17px;
 }
-.detail_product .product_thumb .thumb_one h4 {
+.detail_product .product_thumb .thumb_one .product_ex_title {
   font-size: 2.6rem;
   font-weight: 700;
   color: #000;
   margin-bottom: 10px;
 }
-.detail_product .product_thumb .thumb_one span {
+.detail_product .product_thumb .thumb_one .product_ex_desc {
   width: 800px;
   font-size: 1.8rem;
   font-weight: normal;
